added navbar section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,48 @@
 
 <body>
 
+      <header class="container mx-auto p-5 lg:p-0 mb-10 lg:mb-20">
+
+            <!-- navbar section starts here -->
+            <div class="navbar pl-0 mt-5 mb-12">
+                  <div class="navbar-start">
+                        <div class="dropdown">
+                              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
+                                          viewBox="0 0 24 24" stroke="currentColor">
+                                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M4 6h16M4 12h8m-8 6h16" />
+                                    </svg>
+                              </div>
+                              <ul tabindex="0"
+                                    class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                                    <li><a class="hover:text-[#FF4240] hover:font-bold ">Home</a></li>
+                                    <li><a class="hover:text-[#FF4240] hover:font-bold ">About</a></li>
+                                    <li><a class="hover:text-[#FF4240] hover:font-bold ">Page</a></li>
+                                    <li><a class="hover:text-[#FF4240] hover:font-bold ">Blog</a></li>
+                                    <li><a class="hover:text-[#FF4240] hover:font-bold ">Contact</a></li>
+                              </ul>
+                        </div>
+                        <h4 class="text-3xl md:text-4xl font-extrabold">Hockey<span class="text-[#FF4240]">’</span>s</h4>
+                  </div>
+                  <div class="navbar-center hidden lg:flex">
+                        <ul class="menu text-[#424247] text-base font-normal menu-horizontal px-1">
+                              <li><a class="hover:text-[#FF4240] hover:font-bold ">Home</a></li>
+                              <li><a class="hover:text-[#FF4240] hover:font-bold ">About</a></li>
+                              <li><a class="hover:text-[#FF4240] hover:font-bold ">Page</a></li>
+                              <li><a class="hover:text-[#FF4240] hover:font-bold ">Blog</a></li>
+                              <li><a class="hover:text-[#FF4240] hover:font-bold ">Contact</a></li>
+                        </ul>
+                  </div>
+                  <div class="navbar-end space-x-5">
+                        <i class="fa-solid hidden md:flex text-gray-500 fa-magnifying-glass text-xl"></i>
+                        <button class="text-white text-lg font-bold bg-[#FF4240] md:py-4 py-2 md:px-6 px-3 rounded-lg">Get
+                              Tickets</button>
+                  </div>
+            </div> <!-- navbar section ends here -->
+
+      </header>
+
 </body>
 
 </html>
