--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <header class="container mx-auto p-5 lg:p-0 mb-10 lg:mb-20">
 
             <!-- navbar section starts here -->
-            <div class="navbar pl-0 mt-5 mb-12">
+            <div class="navbar pl-0 mt-5 mb-5">
                   <div class="navbar-start">
                         <div class="dropdown">
                               <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -55,7 +55,8 @@
                                     <li><a class="hover:text-[#FF4240] hover:font-bold ">Contact</a></li>
                               </ul>
                         </div>
-                        <h4 class="text-3xl md:text-4xl font-extrabold">Hockey<span class="text-[#FF4240]">’</span>s</h4>
+                        <h4 class="text-3xl md:text-4xl font-extrabold">Hockey<span class="text-[#FF4240]">’</span>s
+                        </h4>
                   </div>
                   <div class="navbar-center hidden lg:flex">
                         <ul class="menu text-[#424247] text-base font-normal menu-horizontal px-1">
@@ -68,10 +69,68 @@
                   </div>
                   <div class="navbar-end space-x-5">
                         <i class="fa-solid hidden md:flex text-gray-500 fa-magnifying-glass text-xl"></i>
-                        <button class="text-white text-lg font-bold bg-[#FF4240] md:py-4 py-2 md:px-6 px-3 rounded-lg">Get
+                        <button
+                              class="text-white text-lg font-bold bg-[#FF4240] md:py-4 py-2 md:px-6 px-3 rounded-lg">Get
                               Tickets</button>
                   </div>
             </div> <!-- navbar section ends here -->
+
+            <!-- Banner section starts here -->
+            <div class="relative">
+
+                  <div class="carousel h-80 md:h-[550px] w-full mb-6">
+                        <div id="slide1" class="carousel-item relative w-full">
+                              <img src="./image/1.png" class="w-full object-cover rounded-2xl" />
+                              <div
+                                    class="absolute flex justify-start transform -translate-y-1/2 md:left-5 left-[37%] right-5 space-x-2 top-[90%] md:top-[90%] ">
+                                    <a href="#slide4" class="btn bg-black text-white hover:text-black btn-circle">❮</a>
+                                    <a href="#slide2" class="btn bg-black text-white hover:text-black btn-circle">❯</a>
+                              </div>
+
+                        </div>
+                        <div id="slide2" class="carousel-item relative w-full">
+                              <img src="./image/2.png" class="w-full object-cover rounded-2xl" />
+                              <div
+                                    class="absolute flex justify-start transform -translate-y-1/2 md:left-5 left-[37%] right-5 space-x-2 top-[90%] md:top-[90%] ">
+                                    <a href="#slide1" class="btn bg-black text-white hover:text-black btn-circle">❮</a>
+                                    <a href="#slide3" class="btn bg-black text-white hover:text-black btn-circle">❯</a>
+                              </div>
+                        </div>
+                        <div id="slide3" class="carousel-item relative w-full">
+                              <img src="./image/3.png" class="w-full object-cover rounded-2xl" />
+                              <div
+                                    class="absolute flex justify-start transform -translate-y-1/2 md:left-5 left-[37%] right-5 space-x-2 top-[90%] md:top-[90%] ">
+                                    <a href="#slide2" class="btn bg-black text-white hover:text-black btn-circle">❮</a>
+                                    <a href="#slide4" class="btn bg-black text-white hover:text-black btn-circle">❯</a>
+                              </div>
+                        </div>
+                        <div id="slide4" class="carousel-item relative w-full">
+                              <img src="./image/4.png" class="w-full object-cover rounded-2xl" />
+                              <div
+                                    class="absolute flex justify-start transform -translate-y-1/2 md:left-5 left-[37%] right-5 space-x-2 top-[90%] md:top-[90%] ">
+                                    <a href="#slide3" class="btn bg-black text-white hover:text-black btn-circle">❮</a>
+                                    <a href="#slide1" class="btn bg-black text-white hover:text-black btn-circle">❯</a>
+                              </div>
+                        </div>
+                  </div>
+
+                  <!-- banner card -->
+                  <div class="block lg:absolute bottom-12 right-6 w-full lg:w-1/2">
+                        <div class="card ml-auto bg-[#131318] shadow-xl">
+                              <div class="card-body">
+                                    <h2 class="card-title mb-4 text-white text-2xl font-extrabold">Meet all the heroes
+                                          from
+                                          the field</h2>
+                                    <p class="text-base text-white opacity-40 font-medium">Dit amet consectetur.
+                                          Condimentum
+                                          dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam
+                                          proin.
+                                    </p>
+
+                              </div>
+                        </div>
+                  </div>
+            </div> <!-- Banner section ends here -->
 
       </header>
 
