--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+      <!-- css -->
+<link rel="stylesheet" href="./styles/style.css">
 
       <!-- Custom style -->
       <style>
@@ -33,7 +35,7 @@
 
 <body>
 
-      <header class="container mx-auto p-5 lg:p-0 mb-10 lg:mb-20">
+      <header class="container mx-auto p-4 lg:p-0 mb-10 lg:mb-20">
 
             <!-- navbar section starts here -->
             <div class="navbar pl-0 mt-5 mb-5">
@@ -133,6 +135,50 @@
             </div> <!-- Banner section ends here -->
 
       </header>
+
+      <main class="container mx-auto p-4 lg:p-0 mb-10 lg:mb-20">
+
+
+            <!-- Hockey club section starts here -->
+            <section class="mb-10 lg:mb-20">
+
+                  <div class="mb-10 border-b border-t border-dashed border-gray-300 py-10">
+                        <h4 class="text-4xl font-extrabold text-center mb-5">Professional Hockeys Club</h4>
+                        <p
+                              class="text-gray-600 text-center text-base font-medium w-full md:w-[600px] mx-auto lg:w-[700px]">
+                              Welcome to the premier professional hockey club. As one of the oldest and most respected
+                              franchises in the league.</p>
+                  </div>
+
+                  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                        <div class="text-center">
+                              <div class="radial-progress text-primary mb-5" style="--value:87;" role="progressbar">87%
+                              </div>
+                              <h4 class="text-xl font-semibold mb-4">Prayer Facility</h4>
+                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">Sufficient space to accommodate individuals for prayer.</p>
+                        </div>
+                        <div class="text-center">
+                              <div class="radial-progress text-warning mb-5" style="--value:95;" role="progressbar">95%
+                              </div>
+                              <h4 class="text-xl font-semibold mb-4">Experienced Coach</h4>
+                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">Skilled mentor with proven track record in developing talent.</p>
+                        </div>
+                        <div class="text-center">
+                              <div class="radial-progress text-secondary mb-5" style="--value:90;" role="progressbar">
+                                    90%</div>
+                              <h4 class="text-xl font-semibold mb-4">Senior Player</h4>
+                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">"Veteran athlete brings leadership, experience, and expertise to team.</p>
+                        </div>
+                        <div class="text-center">
+                              <div class="radial-progress text-success mb-5" style="--value:80;" role="progressbar">80%
+                              </div>
+                              <h4 class="text-xl font-semibold mb-4">Training Ground</h4>
+                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">Dedicated facility where athletes hone skills and teamwork.</p>
+                        </div>
+                  </div>
+            </section> <!-- Hockey club section ends here -->
+
+      </main>
 
 </body>
 
