added programmes  section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             crossorigin="anonymous" referrerpolicy="no-referrer" />
 
       <!-- css -->
-<link rel="stylesheet" href="./styles/style.css">
+      <link rel="stylesheet" href="./styles/style.css">
 
       <!-- Custom style -->
       <style>
@@ -155,28 +155,70 @@
                               <div class="radial-progress text-primary mb-5" style="--value:87;" role="progressbar">87%
                               </div>
                               <h4 class="text-xl font-semibold mb-4">Prayer Facility</h4>
-                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">Sufficient space to accommodate individuals for prayer.</p>
+                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">Sufficient space to
+                                    accommodate individuals for prayer.</p>
                         </div>
                         <div class="text-center">
                               <div class="radial-progress text-warning mb-5" style="--value:95;" role="progressbar">95%
                               </div>
                               <h4 class="text-xl font-semibold mb-4">Experienced Coach</h4>
-                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">Skilled mentor with proven track record in developing talent.</p>
+                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">Skilled mentor with proven
+                                    track record in developing talent.</p>
                         </div>
                         <div class="text-center">
                               <div class="radial-progress text-secondary mb-5" style="--value:90;" role="progressbar">
                                     90%</div>
                               <h4 class="text-xl font-semibold mb-4">Senior Player</h4>
-                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">"Veteran athlete brings leadership, experience, and expertise to team.</p>
+                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">"Veteran athlete brings
+                                    leadership, experience, and expertise to team.</p>
                         </div>
                         <div class="text-center">
                               <div class="radial-progress text-success mb-5" style="--value:80;" role="progressbar">80%
                               </div>
                               <h4 class="text-xl font-semibold mb-4">Training Ground</h4>
-                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">Dedicated facility where athletes hone skills and teamwork.</p>
+                              <p class="text-[rgba(19, 19, 24, 0.60)] text-base font-normal">Dedicated facility where
+                                    athletes hone skills and teamwork.</p>
                         </div>
                   </div>
             </section> <!-- Hockey club section ends here -->
+
+            <!-- Programmes section starts here -->
+            <section>
+                  <div class="mb-10 border-b border-t border-dashed border-gray-300 py-10">
+                        <h4 class="text-4xl font-extrabold text-center mb-5">Program Sections</h4>
+                        <p
+                              class="text-gray-600 text-center text-base font-medium w-full md:w-[600px] mx-auto lg:w-[700px]">
+                              A dedicated space to highlight diverse educational, training, or event initiatives for
+                              community engagement and enrichment.</p>
+                  </div>
+
+                  <div class="programme-images-container gap-6 grid grid-cols-1 lg:grid-cols-6">
+
+                        <div class="lg:col-span-3 programme-image-one rounded-2xl px-9 pb-9 pt-9 md:pt-24">
+                              <h4 class="text-white text-3xl font-extrabold mb-4">Junior Program</h4>
+                              <p class="text-white mb-5 text-base font-medium opacity-95">Tailored initiatives aimed at fostering youth development, skill-building, providing a supportive environment for young athletes to grow in their sport.</p>
+                              <button class="text-white text-xl font-bold bg-[#FF4240] py-4 px-5 rounded-lg">Register
+                                    Now!</button>
+                        </div>
+
+                        <div class="lg:col-span-3 programme-image-two rounded-2xl px-9 pb-9 pt-9 md:pt-24">
+                              <h4 class="text-white text-3xl font-extrabold mb-4">Teenager Program</h4>
+                              <p class="text-white mb-5 text-base font-medium opacity-95">Tailored initiatives designed to support teenagers in skill development, leadership, and personal growth within a supportive and empowering environment.</p>
+                              <button class="text-white text-xl font-bold bg-[#FF4240] py-4 px-5 rounded-lg">Register
+                                    Now!</button>
+                        </div>
+
+                        <div
+                              class="lg:col-span-6 lg:h-[450px] flex flex-col justify-end programme-image-three rounded-2xl px-9 pb-9 pt-9 md:pt-24">
+                              <h4 class="text-white text-3xl font-extrabold mb-4">Professional Program</h4>
+                              <p class="lg:w-1/2 text-white mb-5 text-base font-medium opacity-95">Tailored initiatives designed to enhance skills, leadership, and career development for individuals seeking to excel in their respective fields.</p>
+                              <button
+                                    class="text-white text-xl w-fit font-bold bg-[#FF4240] py-4 px-5 rounded-lg">Register
+                                    Now!</button>
+                        </div>
+
+                  </div>
+            </section> <!-- Programme section ends here -->
 
       </main>
 
