added get in touch section

--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@
                                           Our Equipment
                                     </div>
                                     <div class="collapse-content">
-                                          <p
-                                                class="text-[#13131899] text-base font-medium">
-                                                Explore our range of high-quality sports gear and accessories designed to enhance your performance and experience.</p>
+                                          <p class="text-[#13131899] text-base font-medium">
+                                                Explore our range of high-quality sports gear and accessories designed
+                                                to enhance your performance and experience.</p>
                                     </div>
                               </div>
                               <div class="collapse collapse-plus py-2 border-b rounded-none">
@@ -430,7 +430,9 @@
                                           Hockey Training
                                     </div>
                                     <div class="collapse-content">
-                                          <p class="text-[#13131899] text-base font-medium">Elevate your game with our comprehensive training programs tailored for all skill levels and ages.</p>
+                                          <p class="text-[#13131899] text-base font-medium">Elevate your game with our
+                                                comprehensive training programs tailored for all skill levels and ages.
+                                          </p>
                                     </div>
                               </div>
                               <div class="collapse collapse-plus py-2 border-b rounded-none">
@@ -439,7 +441,9 @@
                                           Private Lesson
                                     </div>
                                     <div class="collapse-content">
-                                          <p class="text-[#13131899] text-base font-medium">Personalized coaching sessions tailored to your individual needs and goals for accelerated skill development and improvement.</p>
+                                          <p class="text-[#13131899] text-base font-medium">Personalized coaching
+                                                sessions tailored to your individual needs and goals for accelerated
+                                                skill development and improvement.</p>
                                     </div>
                               </div>
 
@@ -449,7 +453,9 @@
                                           Ski Touring
                                     </div>
                                     <div class="collapse-content">
-                                          <p class="text-[#13131899] text-base font-medium">Embark on unforgettable adventures exploring scenic backcountry terrain with our guided ski touring experiences.</p>
+                                          <p class="text-[#13131899] text-base font-medium">Embark on unforgettable
+                                                adventures exploring scenic backcountry terrain with our guided ski
+                                                touring experiences.</p>
                                     </div>
                               </div>
 
@@ -459,7 +465,8 @@
                                           Bookings
                                     </div>
                                     <div class="collapse-content">
-                                          <p class="text-[#13131899] text-base font-medium">Secure your spot for our upcoming events, lessons, and experiences hassle-free.</p>
+                                          <p class="text-[#13131899] text-base font-medium">Secure your spot for our
+                                                upcoming events, lessons, and experiences hassle-free.</p>
                                     </div>
                               </div>
 
@@ -469,13 +476,92 @@
                                           Pricings
                                     </div>
                                     <div class="collapse-content">
-                                          <p class="text-[#13131899] text-base font-medium">Discover transparent and competitive pricing for our services and products.</p>
+                                          <p class="text-[#13131899] text-base font-medium">Discover transparent and
+                                                competitive pricing for our services and products.</p>
                                     </div>
                               </div>
                         </div>
                   </div>
 
             </section> <!-- Client questions section ends here -->
+
+            <!-- get in touch section starts here -->
+            <section>
+                  <div class="mb-10 border-b border-t border-dashed border-gray-300 py-10">
+                        <h4 class="text-4xl font-extrabold text-center mb-5">Get In Touch</h4>
+                        <p
+                              class="text-[#13131899] text-center text-base font-medium w-full md:w-[600px] mx-auto lg:w-[700px]">
+                              Connect with us for inquiries, support, or collaboration opportunities. We're here to assist you.</p>
+                  </div>
+
+                  <div class="flex flex-col lg:flex-row gap-6">
+                        <div class="border lg:w-2/5 rounded-xl p-5 lg:p-9">
+                              <div class="bg-emerald-50 mb-6 rounded-xl p-7">
+                                    <img class="mb-6" src="./image/Group 1171275317.png" alt="">
+                                    <p>Phone Number :</p>
+                                    <h4>(+62) 123-321-543</h4>
+                              </div>
+                              <div class="bg-emerald-50 mb-6 rounded-xl p-7">
+                                    <img class="mb-6" src="./image/Group 1171275318.png" alt="">
+                                    <p>Phone Number :</p>
+                                    <h4>(+62) 123-321-543</h4>
+                              </div>
+                              <div class="bg-emerald-50 rounded-xl p-7">
+                                    <img src="./image/Group 1171275321.png" alt="">
+                                    <p>Phone Number :</p>
+                                    <h4>(+62) 123-321-543</h4>
+                              </div>
+
+                        </div>
+
+                        <div class="border lg:border-none p-4 lg:p-0 rounded-xl lg:w-3/5">
+                              <form>
+                                    <div class="flex flex-col md:flex-row gap-5 justify-between">
+                                          <div class="flex-1">
+                                                <label class="text-xl font-bold mb-10" for="text">Your Name</label>
+
+                                                <input class="pl-4 w-full h-14 mt-3 rounded-xl bg-gray-100" type="text"
+                                                      id="text" placeholder="Enter your name">
+                                          </div>
+                                          <div class="flex-1">
+                                                <label class="text-xl font-bold mb-10" for="email">Your Email</label>
+
+                                                <input class=" w-full pl-4 h-14 mt-3 rounded-xl bg-gray-100"
+                                                      type="email" id="email" placeholder="Enter your email">
+                                          </div>
+                                    </div>
+
+                                    <div class="flex flex-col md:flex-row gap-5 justify-between my-6">
+                                          <div class="flex-1">
+                                                <label class="text-xl font-bold mb-10" for="text">SUbjects</label>
+
+                                                <input class="pl-4 w-full h-14 mt-3 rounded-xl bg-gray-100" type="text"
+                                                      id="text" placeholder="Enter your subjects">
+                                          </div>
+                                          <div class="flex-1">
+                                                <label class="text-xl font-bold mb-10" for="email">Your Phone</label>
+
+                                                <input class=" w-full pl-4 h-14 mt-3 rounded-xl bg-gray-100"
+                                                      type="email" id="email" placeholder="Enter your phone">
+                                          </div>
+                                    </div>
+
+                                    <div class="mb-2">
+                                          <label class="text-xl font-bold " for="">Message</label>
+                                          <textarea class="block w-full mt-4 bg-gray-100 rounded-xl" name="" id=""
+                                                cols="30" rows="10"></textarea>
+
+                                    </div>
+
+                                    <button
+                                          class="text-white mt-10 w-full text-xl font-bold bg-[#FF4240] py-3 px-6 rounded-lg">Send
+                                          Message</button>
+                              </form>
+                        </div>
+                  </div>
+
+            </section>
+            <!-- get in touch section ends here -->
 
       </main>
 
