added social media section

--- a/index.html
+++ b/index.html
@@ -486,12 +486,13 @@
             </section> <!-- Client questions section ends here -->
 
             <!-- get in touch section starts here -->
-            <section>
+            <section class="mb-10 lg:mb-20">
                   <div class="mb-10 border-b border-t border-dashed border-gray-300 py-10">
                         <h4 class="text-4xl font-extrabold text-center mb-5">Get In Touch</h4>
                         <p
                               class="text-[#13131899] text-center text-base font-medium w-full md:w-[600px] mx-auto lg:w-[700px]">
-                              Connect with us for inquiries, support, or collaboration opportunities. We're here to assist you.</p>
+                              Connect with us for inquiries, support, or collaboration opportunities. We're here to
+                              assist you.</p>
                   </div>
 
                   <div class="flex flex-col lg:flex-row gap-6">
@@ -562,6 +563,19 @@
 
             </section>
             <!-- get in touch section ends here -->
+
+            <!-- Social Media section starts here -->
+            <section class="mb-10 lg:mb-20 bg-[#13131808] py-10 rounded-xl">
+                  <h4 class="text-2xl font-extrabold text-center mb-5">Social Media</h4>
+                  <div class="flex justify-center text-2xl gap-6">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                  </div>
+            </section>
+            <!-- Social Media section ends here -->
 
       </main>
 
