added footer section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Hockeys</title>
-      <link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon">
+      <link rel="shortcut icon" href="./image/logo.jpg" type="image/x-icon">
 
       <!-- Tailwind & DaisyUI links -->
       <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -578,6 +578,58 @@
             <!-- Social Media section ends here -->
 
       </main>
+
+      <footer class="bg-[#131318]">
+            <div class="container mx-auto py-20 px-4 gap-10 lg:gap-0 grid grid-cols-6">
+
+                  <div class="col-span-6 lg:col-span-3 text-center lg:text-start">
+                        <h4 class="text-2xl text-white font-extrabold">Get In Touch</h4>
+                        <p class="text-[#ffffff99] font-medium text-base mt-4">Have questions or feedback? Feel free to
+                              reach out to our team.<br> We're here to assist you!</p>
+                        <div class="flex items-center justify-center lg:justify-start gap-3 mt-6">
+                              <i class="text-[#FF4240] fa-regular fa-envelope"></i>
+                              <p class="text-[#ffffff99] font-medium text-base">hockeys@support.com</p>
+                        </div>
+
+                        <div class="flex items-center justify-center lg:justify-start gap-3">
+                              <i class="text-[#FF4240] fa-solid fa-phone"></i>
+                              <p class="text-[#ffffff99] font-medium text-base">(+62) 123-321-543</p>
+                        </div>
+                  </div>
+
+                  <div class="flex flex-col text-center lg:text-start gap-5 col-span-3 md:col-span-2 lg:col-span-1">
+
+                        <h6 class="text-lg font-bold text-white">Company</h6>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">About us</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Contact</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Jobs</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Press kit</a>
+
+                  </div>
+
+                  <div class="flex flex-col text-center lg:text-start gap-5 col-span-3 md:col-span-2 lg:col-span-1">
+
+                        <h6 class="text-lg font-bold text-white">Support</h6>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Help center</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">FAQ</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Ticket center</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Contact us</a>
+
+                  </div>
+
+                  <div class="flex flex-col gap-5 col-span-6 md:col-span-2 lg:col-span-1 text-center lg:text-start">
+
+                        <h6 class="text-lg font-bold text-white">Service</h6>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Academy</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Group Lesson</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Private Lesson</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Hockeys for kids</a>
+                        <a class="text-[#ffffff99] font-medium text-base link link-hover">Hockeys for Adult</a>
+
+                  </div>
+
+            </div>
+      </footer>
 
 </body>
 
