--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
       <meta charset="UTF-8">
@@ -55,6 +55,13 @@
                                     <li><a class="hover:text-[#FF4240] hover:font-bold ">Page</a></li>
                                     <li><a class="hover:text-[#FF4240] hover:font-bold ">Blog</a></li>
                                     <li><a class="hover:text-[#FF4240] hover:font-bold ">Contact</a></li>
+                                    <li>
+                                          <div class="flex items-center gap-3">
+                                                <span class="hover:text-[#FF4240] inline hover:font-bold ">Search</span>
+                                                <i
+                                                      class="fa-solid text-[#424247] fa-magnifying-glass inline"></i>
+                                          </div>
+                                    </li>
                               </ul>
                         </div>
                         <h4 class="text-3xl md:text-4xl font-extrabold">Hockey<span class="text-[#FF4240]">’</span>s
@@ -123,10 +130,7 @@
                                     <h2 class="card-title mb-4 text-white text-2xl font-extrabold">Meet all the heroes
                                           from
                                           the field</h2>
-                                    <p class="text-base text-white opacity-40 font-medium">Dit amet consectetur.
-                                          Condimentum
-                                          dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam
-                                          proin.
+                                    <p class="text-base text-white opacity-40 font-medium">Discover and meet the heroes shaping the field! Explore our platform to connect with innovators, experts, and thought leaders who are making waves in the industry.
                                     </p>
 
                               </div>
@@ -497,20 +501,20 @@
 
                   <div class="flex flex-col lg:flex-row gap-6">
                         <div class="border lg:w-2/5 rounded-xl p-5 lg:p-9">
-                              <div class="bg-emerald-50 mb-6 rounded-xl p-7">
+                              <div class="bg-[#629cf31a] mb-6 rounded-xl p-7">
                                     <img class="mb-6" src="./image/Group 1171275317.png" alt="">
-                                    <p>Phone Number :</p>
-                                    <h4>(+62) 123-321-543</h4>
+                                    <p class="text-[#13131899] text-base font-normal">Phone Number :</p>
+                                    <h4 class="text-lg font-extrabold">(+88)01882888860</h4>
                               </div>
-                              <div class="bg-emerald-50 mb-6 rounded-xl p-7">
+                              <div class="bg-[#fddd5f1a] mb-6 rounded-xl p-7">
                                     <img class="mb-6" src="./image/Group 1171275318.png" alt="">
-                                    <p>Phone Number :</p>
-                                    <h4>(+62) 123-321-543</h4>
+                                    <p class="text-[#13131899] text-base font-normal">Email :</p>
+                                    <h4 class="flex flex-wrap text-lg font-extrabold">kmbayezid955@gmail.com</h4>
                               </div>
-                              <div class="bg-emerald-50 rounded-xl p-7">
-                                    <img src="./image/Group 1171275321.png" alt="">
-                                    <p>Phone Number :</p>
-                                    <h4>(+62) 123-321-543</h4>
+                              <div class="bg-[#629cf31a] rounded-xl p-7">
+                                    <img class="mb-6" src="./image/Group 1171275321.png" alt="">
+                                    <p class="text-[#13131899] text-base font-normal">Location :</p>
+                                    <h4 class="text-lg font-extrabold">Matlab North, Chandpur</h4>
                               </div>
 
                         </div>
@@ -550,7 +554,7 @@
                                     <div class="mb-2">
                                           <label class="text-xl font-bold " for="">Message</label>
                                           <textarea class="block w-full mt-4 bg-gray-100 rounded-xl" name="" id=""
-                                                cols="30" rows="10"></textarea>
+                                                cols="30" rows="12"></textarea>
 
                                     </div>
 
