--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                               <p class="text-[#ffffff99] font-medium text-base">hockeys@support.com</p>
                         </div>
 
-                        <div class="flex items-center justify-center lg:justify-start gap-3">
+                        <div class="flex mt-3 items-center justify-center lg:justify-start gap-3">
                               <i class="text-[#FF4240] fa-solid fa-phone"></i>
                               <p class="text-[#ffffff99] font-medium text-base">(+62) 123-321-543</p>
                         </div>
